[package]
authors = ["lf- <lf-@users.noreply.github.com>"]
description = "Nix documentation grepping tool"
edition = "2018"
name = "nix-doc"
version = "0.2.1"
license = "LGPL-3.0-or-later"
homepage = "https://github.com/lf-/nix-doc"
repository = "https://github.com/lf-/nix-doc"

[dependencies]
rnix = "0.8.0"
walkdir = "2.3.1"
regex = "1.3.9"
colorful = "0.2.1"
num_cpus = "1.13.0"
textwrap = "0.12.1"
