[package]
name = "nix-doc-plugin"
version.workspace = true
edition = "2018"

[lib]
crate_type = ["cdylib"]
test = false

[build-dependencies]
cc = "1.0.81"
pkg-config = "0.3.18"

[dependencies]
nix-doc = { path = "../nix-doc" }

[dev-dependencies]
expect-test = "1.4.0"
strip-ansi-escapes = "0.1.1"
tempfile = "3.3.0"
