# SPDX-FileCopyrightText: 2024 Jade Lovelace
#
# SPDX-License-Identifier: BSD-2-Clause OR MIT

[package]
name = "nix-doc-plugin"
version.workspace = true
license.workspace = true
edition = "2018"

[lib]
crate_type = ["cdylib"]
test = false

[build-dependencies]
cc = "1.0.81"
pkg-config = "0.3.18"

[dependencies]
nix-doc = { path = "../nix-doc" }

[dev-dependencies]
cc = "1.0.83"
expect-test = "1.4.0"
strip-ansi-escapes = "0.1.1"
tempfile = "3.3.0"
